[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
fastrand = "1.7.0"
log = "0.4.17"
once_cell = "1.13.0"
pixels = "0.9.0"
winit = "0.26.1"
winit_input_helper = "0.12.0"
